fixed image distortion issue on IE added compatibility with Ghost 0.8

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -568,6 +568,8 @@ footer a {
 .art-body img {
     max-width: 100%;
     max-height: 100vh;
+    width: auto;
+    height: auto;
     margin-top: 26px;
     margin-bottom: 26px;
 }
@@ -653,6 +655,8 @@ footer a {
 .abt-body img {
   max-width: 100%;
   max-height: 100vh;
+  width: auto;
+  height: auto;
   margin-bottom: 26px;
 }
 .abt-body img.center {
